--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.0",
     "express-status-monitor": "^1.3.4",
     "method-override": "^3.0.0",
+    "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node": "^22.17.0",
